[gd_scene load_steps=8 format=3 uid="uid://cv0bab7mm3pdi"]

[ext_resource type="Script" path="res://test_enemy.gd" id="2_nfxrk"]
[ext_resource type="Texture2D" uid="uid://dmfdkkissgpj4" path="res://sprites/sprite_sheet_1.png" id="2_sbn1i"]
[ext_resource type="Script" path="res://enemy_anim.gd" id="3_sxnny"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q1stp"]
radius = 9.0
height = 26.0

[sub_resource type="Animation" id="Animation_25uhf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_ma1nu"]
resource_name = "wlking"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4dml"]
_data = {
"RESET": SubResource("Animation_25uhf"),
"wlking": SubResource("Animation_ma1nu")
}

[node name="pet" type="CharacterBody2D"]
texture_filter = 1
position = Vector2(2, 0)
script = ExtResource("2_nfxrk")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2(1, 0)
polygon = PackedVector2Array(-4, -8, -4, -7, -5, -7, -5, -5, -6, -5, -6, -3, -7, -3, -7, 1, -5, 4, -6, 4, -6, 7, -5, 7, -5, 11, -4, 11, -4, 12, -2, 12, -2, 11, -1, 11, -1, 12, 1, 12, 1, 11, 2, 11, 2, 7, 3, 7, 3, 4, 2, 4, 2, 3, 3, 3, 3, 2, 4, 2, 4, 1, 5, 1, 5, -3, 4, -3, 4, -5, 3, -5, 3, -6, 2, -6, 2, -7, -2, -7, -2, -8)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
texture = ExtResource("2_sbn1i")
hframes = 5
vframes = 6
frame = 2

[node name="Area2D" type="Area2D" parent="Sprite2D"]
position = Vector2(-1, 0)
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/Area2D"]
position = Vector2(1, 0)
polygon = PackedVector2Array(-4, -8, -4, -7, -5, -7, -5, -5, -6, -5, -6, -3, -7, -3, -7, 1, -5, 4, -6, 4, -6, 7, -5, 7, -5, 11, -4, 11, -4, 12, -2, 12, -2, 11, -1, 11, -1, 12, 1, 12, 1, 11, 2, 11, 2, 7, 3, 7, 3, 4, 2, 4, 2, 3, 3, 3, 3, 2, 4, 2, 4, 1, 5, 1, 5, -3, 4, -3, 4, -5, 3, -5, 3, -6, 2, -6, 2, -7, -2, -7, -2, -8)

[node name="break_block" type="Area2D" parent="."]
scale = Vector2(1.2, 1.2)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="break_block"]
position = Vector2(3.8147e-06, 2)
scale = Vector2(0.85, 0.85)
shape = SubResource("CapsuleShape2D_q1stp")

[node name="break_block2" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_h4dml")
}
script = ExtResource("3_sxnny")

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="break_block" to="." method="_on_break_block_body_entered"]
[connection signal="timeout" from="break_block2" to="." method="_on_break_block_2_timeout"]
